@@ -1,5 +1,97 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <calendar>
+  <country name="Canada">
+    <date name="New Year's Day" value="*/1/1" type="national" />
+    <date name="Groundhog Day" value="*/2/2" type="secular" />
+    <date name="Valentine's Day" value="*/2/14" type="secular" />
+    <date name="Flag Day" value="*/2/15" type="secular" />
+    <date name="Daylight Savings begins" value="*/1/sun/apr" type="informational" />
+    <date name="St. Patrick's Day" value="*/3/17" type="secular" />
+    <date name="April Fool's Day" value="*/4/1" type="secular" />
+    <date name="Earth Day" value="*/4/22" type="secular" />
+    <date name="Mother's Day" value="*/2/sun/may" type="secular" />
+    <date name="Victoria Day" value="*/5/21" type="national" />
+    <date name="Father's Day" value="*/3/sun/jun" type="secular" />
+    <date name="St-Jean Baptiste (QC)" value="*/6/24" type="national" />
+    <date name="Canada Day" value="*/7/1" type="national" />
+    <date name="Civic Holiday" value="*/1/mon/aug" type="national" />
+    <date name="Labour Day" value="*/1/mon/sep" type="national" />
+    <date name="Grandparent's Day" value="*/2/sun/sep" offset="6" type="secular" />
+    <date name="Thanksgiving" value="*/2/mon/oct" type="national" />
+    <date name="Halloween" value="*/10/31" type="secular" />
+    <date name="Rememberance Day" value="*/11/11" type="national" />
+    <date name="Daylight Savings ends" value="*/-1/sun/oct" type="informational" />
+    <date name="Christmas" value="*/12/25" type="national" />
+    <date name="Boxing Day" value="*/12/26" type="national" />
+    <date name="Easter" type="religious" value="1980/4/6" />
+    <date name="Easter" type="religious" value="1981/4/19" />
+    <date name="Easter" type="religious" value="1982/4/11" />
+    <date name="Easter" type="religious" value="1983/4/3" />
+    <date name="Easter" type="religious" value="1984/4/22" />
+    <date name="Easter" type="religious" value="1985/4/7" />
+    <date name="Easter" type="religious" value="1986/3/30" />
+    <date name="Easter" type="religious" value="1987/4/19" />
+    <date name="Easter" type="religious" value="1988/4/3" />
+    <date name="Easter" type="religious" value="1989/3/26" />
+    <date name="Easter" type="religious" value="1990/4/15" />
+    <date name="Easter" type="religious" value="1991/3/31" />
+    <date name="Easter" type="religious" value="1992/4/19" />
+    <date name="Easter" type="religious" value="1993/4/11" />
+    <date name="Easter" type="religious" value="1994/4/3" />
+    <date name="Easter" type="religious" value="1995/4/16" />
+    <date name="Easter" type="religious" value="1996/4/7" />
+    <date name="Easter" type="religious" value="1997/3/30" />
+    <date name="Easter" type="religious" value="1998/4/12" />
+    <date name="Easter" type="religious" value="1999/4/4" />
+    <date name="Easter" type="religious" value="2000/4/23" />
+    <date name="Easter" type="religious" value="2001/4/15" />
+    <date name="Easter" type="religious" value="2002/3/31" />
+    <date name="Easter" type="religious" value="2003/4/20" />
+    <date name="Easter" type="religious" value="2004/4/11" />
+    <date name="Easter" type="religious" value="2005/3/27" />
+    <date name="Easter" type="religious" value="2006/4/16" />
+    <date name="Easter" type="religious" value="2007/4/8" />
+    <date name="Easter" type="religious" value="2008/3/23" />
+    <date name="Easter" type="religious" value="2009/4/12" />
+    <date name="Easter" type="religious" value="2010/4/4" />
+    <date name="Easter" type="religious" value="2011/4/24" />
+    <date name="Easter" type="religious" value="2012/4/8" />
+    <date name="Easter" type="religious" value="2013/3/31" />
+    <date name="Easter" type="religious" value="2014/4/20" />
+    <date name="Easter" type="religious" value="2015/4/5" />
+    <date name="Easter" type="religious" value="2016/3/27" />
+    <date name="Easter" type="religious" value="2017/4/16" />
+    <date name="Easter" type="religious" value="2018/4/1" />
+    <date name="Easter" type="religious" value="2019/4/21" />
+    <date name="Easter" type="religious" value="2020/4/12" />
+    <date name="Easter" type="religious" value="2021/4/4" />
+    <date name="Easter" type="religious" value="2022/4/17" />
+    <date name="Easter" type="religious" value="2023/4/9" />
+    <date name="Easter" type="religious" value="2024/3/31" />
+    <date name="Passover" value="2005/4/24" type="religious" />
+    <date name="Passover" value="2006/4/13" type="religious" />
+    <date name="Passover" value="2007/4/03" type="religious" />
+    <date name="Passover" value="2008/4/20" type="religious" />
+    <date name="Passover" value="2009/4/09" type="religious" />
+    <date name="Passover" value="2010/3/30" type="religious" />
+    <date name="Passover" value="2011/4/19" type="religious" />
+    <date name="Yom Kippur" value="2005/10/13" type="religious" />
+    <date name="Yom Kippur" value="2006/10/02" type="religious" />
+    <date name="Yom Kippur" value="2007/9/27" type="religious" />
+    <date name="Yom Kippur" value="2008/10/09" type="religious" />
+    <date name="Yom Kippur" value="2009/9/28" type="religious" />
+    <date name="Yom Kippur" value="2010/9/18" type="religious" />
+    <date name="Hanukkah begins" value="2004/12/07" type="religious" />
+    <date name="Hanukkah begins" value="2005/12/25" type="religious" />
+    <date name="Hanukkah begins" value="2006/12/15" type="religious" />
+    <date name="Hanukkah begins" value="2007/12/04" type="religious" />
+    <date name="Hanukkah begins" value="2008/12/21" type="religious" />
+    <date name="Hanukkah begins" value="2009/12/11" type="religious" />
+    <date name="Hanukkah begins" value="2010/12/01" type="religious" />
+    <date name="Ramadan begins" value="2006/9/24" type="religious" />
+    <date name="Ramadan begins" value="2007/9/13" type="religious" />
+    <date name="Ramadan begins" value="2008/9/2" type="religious" />
+  </country>
   <country name="United States">
     <date name="New Year's Day" value="*/1/1" type="national" />
     <date name="Independence Day" value="*/7/4" type="national" />
